# BaseEngine

./: .gitignore  CMake.sh  CMakeLists.txt  README.md  imgui.ini
CMakeModule/: FindModule.cmake
lib/freetype2/freetype/config/: ftoption.h
lib/openGL/glad/include/glad/: glad.h
lib/openGL/glad/src/: glad.c
property/: Fragment.shader  Vertex.shader  keybindings.json
src/Core/: main.cpp
src/Core/include/: Core.h
src/Engine/: Engine.cpp  Event.cpp  Font.cpp  GUI.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TileSheet.cpp
src/Engine/include/: Defs.h  Engine.h  Event.h  Font.h  GUI.h  Renderer.h  Shader.h  Texture.h  TileSheet.h
